# SpeedSQL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: SpeedDBConfig.cmake.in  SpeedSQLConfig.cmake.in
examples/: basic_usage.cpp  cpp_wrapper_example.cpp  custom_cipher_example.cpp  encryption_example.cpp
include/: speeddb.h  speeddb.hpp  speeddb_crypto.h  speeddb_internal.h  speeddb_types.h  speedsql.h  speedsql.hpp  speedsql_crypto.h  speedsql_internal.h  speedsql_types.h
src/core/: database.cpp  executor.cpp
src/crypto/: cipher_aes.cpp  cipher_aria.cpp  cipher_chacha20.cpp  cipher_none.cpp  cipher_seed.cpp  crypto_provider.cpp
src/index/: btree.cpp
src/sql/: lexer.cpp  parser.cpp
src/storage/: buffer_pool.cpp  file_io.cpp  wal.cpp
src/util/: hash.cpp  value.cpp
tests/: test_main.cpp  test_simple.cpp
